Wed Oct 16 17:24:00 2002  David Helder  <dhelder@umich.edu>

	* configure.ac: Enable -Werror only when in "yes"
	   debug mode.  gcc-3.2 issues warnings on the 
	   G_something_BE_LE ASM macro.  This allows gcc-3.2
	   users to compile GNet.

Fri Oct 11 15:37:41 2002  David Helder  <dhelder@umich.edu>

	* tests/{unpack,pack}.c: Include stdlib.h.  Include
	   string.h in unpack.  Thanks Richard and Erland!

Mon Oct  7 11:51:22 2002  David Helder  <dhelder@umich.edu>

	* 1.1.7 "re-release"
	
	* configure.ac (GNET_BINARY_AGE): Set binary age to 7.  Oops.

	* README: Added eDonkey2000 GTK frontend

Mon Sep 30 16:41:55 2002  David Helder  <dhelder@umich.edu>

	* configure.ac: Include "-Werror" in CFLAGS.

Mon Sep 30 13:18:47 2002  David Helder  <dhelder@umich.edu>

	* src/gnet-private.c (gnet_private_iochannel_new): 
	   Return iochannel.

Mon Sep 30 13:18:11 2002  David Helder  <dhelder@umich.edu>

	* NEWS, *: Release 1.1.6

Thu Sep 26 20:10:23 2002  David Helder  <dhelder@umich.edu>

	* configure.ac: Add --enable-threadsafe-gethostbyname option.
	* src/inetaddr.c (gnet_gethostbyaddr): Add threadsafe
	    gethostbyaddr() variant.
	    (gnet_gethostbyname): "

	* configure.ac: Define GTHREAD_CFLAGS if gthread module
	    is available.  This is used to determine if a gthreads
	    implementation of gethostbyname_r is possible.

Thu Sep 26 18:33:16 2002  David Helder  <dhelder@umich.edu>

	* NEWS, TODO: Updates

Mon Sep 23 18:59:39 2002  David Helder  <dhelder@umich.edu>

	* examples/Makefile.am (noinst_PROGRAMS): Make examples 
	    noinst, not extra.
	* examples/*: Update include to handle this.
	
	* examples/echoclient.c (async_client_sin_iofunc): Return 
	    FALSE on EOF.  Otherwise we get an error.
	
	* src/gnet-private.c (gnet_private_iochannel_new): Added.
	   Creates iochannel from descriptor in usual way.  If
	   we're using GLib 2, then it turns off buffering and
	   encoding.

	* src/tcp.c (gnet_tcp_socket_get_iochannel): Use 
	    gnet_private_iochannel_new()