@@ -1,3 +1,9 @@
+Mon Oct 21 17:28:57 2002  David Helder  <dhelder@umich.edu>
+
+	* tests/Makefile.am (EXTRA_PROGRAMS): Make tests EXTRA, not
+	   noinst.  They should only be build when 'make check' is run.
+	* configure.ac: Touch.
+
 Wed Oct 16 17:24:00 2002  David Helder  <dhelder@umich.edu>
 
 	* configure.ac: Enable -Werror only when in "yes"
